adds some comments

--- a/POC.ipynb
+++ b/POC.ipynb
@@ -137,6 +137,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Removing other columns except the description and solution columns\n",
         "dataset = dataset.remove_columns(['name',\n",
         " 'public_tests.input',\n",
         " 'public_tests.output',\n",
@@ -171,6 +172,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Removing rows without any solution\n",
         "dataset = dataset.filter(lambda example: len(example['solutions.solution']) > 0)"
       ],
       "metadata": {
@@ -265,6 +267,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Adding the <|startoftext|> token so I can use it as a prompt for generating the description after training the model\n",
         "tokenizer = GPT2Tokenizer.from_pretrained('gpt2-medium', bos_token='<|startoftext|>', add_bos_token = True)"
       ],
       "metadata": {
@@ -1224,7 +1227,7 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwQIUpmd2KDk443g/FGy8o",
+      "authorship_tag": "ABX9TyPA+CGjN5qe/aiehyxkBK8+",
       "include_colab_link": true
     },
     "gpuClass": "standard",
