--- a/POC_X.ipynb
+++ b/POC_X.ipynb
@@ -147,9 +147,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# The solutions.solution column contains a list of possible solutions which is problematic for the tokenizer, also it makes sense to use a single solution\n",
         "def prep(example):\n",
-        "  if example[\"solutions.solution\"][0]:\n",
-        "    example[\"solutions.solution\"] = example[\"solutions.solution\"][0]\n",
+        "  example[\"solutions.solution\"] = example[\"solutions.solution\"][0]\n",
         "  return example\n",
         "\n",
         "dataset = dataset.map(prep)"
@@ -339,7 +339,6 @@
         "    labels = np.where(labels != -100, labels, tokenizer.pad_token_id)\n",
         "    decoded_labels = tokenizer.batch_decode(labels, skip_special_tokens=True)\n",
         "\n",
-        "    # Some simple post-processing\n",
         "    decoded_preds = [pred.strip() for pred in decoded_preds]\n",
         "    decoded_labels = [[label.strip()] for label in decoded_labels]\n",
         "    return decoded_preds, decoded_labels"
